<resources>
    <string name="app_name">mobile boilerplate</string>

    <!-- Common -->
    <string name="login">Login</string>
    <string name="log_in">Log In</string>
    <string name="create_account">Create Account</string>
    <string name="arrow_back_logo">Back button</string>
    <string name="next_btn">Next</string>
    <string name="back_btn">Back</string>
    <string name="submit_btn">Submit</string>
    <string name="cancel_logo">Cancel button</string>
    <string name="continue_btn">Continue</string>
    <string name="subscribe_btn">Subscribe</string>
    <string name="contact_us">Contact Us</string>
    <string name="left_icon">Left icon</string>
    <string name="right_icon">Right icon</string>
    <string name="dashboard_title">Dashboard</string>
    <string name="plan_title">Subscription</string>
    <string name="profile_title">Profile</string>

    <!-- Startup Screen -->
    <string name="startup_logo">Client logo placeholder</string>
    <string name="startup_title_text">Get Accurate Predictive Insights</string>
    <string name="startup_description_text">Make better decisions by using A.I</string>

    <!-- Login Screen -->
    <string name="login_sub_title">To get started, first enter your email and password.</string>
    <string name="enter_username">Username</string>
    <string name="enter_password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot password?</string>

    <!-- Sign Up Screen -->
    <string name="signup_title">Create\nAccount</string>
    <string name="signup_main_sub_title">Let\'s get started by entering in your detail!</string>
    <string name="signup_phone_sub_title">Let\'s get started by keying in your mobile number!</string>
    <string name="enter_full_name">Full Name</string>
    <string name="enter_email">Email</string>
    <string name="enter_re_type_password">Re-type Password</string>
    <string name="already_registered">Already have an account?</string>
    <string name="enter_phone_no">Phone No</string>
    <string name="signup_success_title">Success!</string>
    <string name="signup_success_sub_title">Your account has been created.</string>

    <!-- Forgot Password -->
    <string name="forgot_password_title">Forgot\nPassword</string>
    <string name="forgot_password_details">Enter your email address and we\'ll send you a link to reset your password</string>
    <string name="new_password_title">Create New Password</string>
    <string name="new_password_details">Create a new password, a strong password that you don\'t use for other websites.</string>
    <string name="enter_new_password">New Password</string>
    <string name="reset_password_success_title">Password Changed!</string>
    <string name="reset_password_success_sub_title">Your password has been change successfully.</string>

    <!-- OTP Verification -->
    <string name="otp_code_title">CO\nDE</string>
    <string name="otp_code_verification">Verification</string>
    <string name="otp_code_description">Enter one time password sent on 0123456789</string>
    <string name="otp_code_btn">Verify Code</string>

    <!-- Bottom Navigation -->
    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_about">Camera</string>
    <string name="menu_settings">Settings</string>
</resources>