<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp"
    tools:context=".StartUpActivity">

    <ImageView
        android:id="@+id/twist_logo"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:contentDescription="@string/startup_logo"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:src="@drawable/twistcode_logo"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/startup_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center"
            android:layout_marginTop="200dp"
            android:layout_marginBottom="160dp"
            android:text="@string/startup_title_text"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/startup_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center"
            android:layout_marginBottom="140dp"
            android:textStyle="normal"
            android:text="@string/startup_description_text"
            android:textAlignment="center"
            android:textSize="16sp" />

        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="80dp"
            android:background="@drawable/btn_custom"
            android:onClick="onClickLogin"
            android:text="@string/login"
            android:textAllCaps="true"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/signup_btn"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="20dp"
            android:onClick="onClickSignUp"
            android:text="@string/create_account" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>