<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context=".ui.ForgotPasswordSuccessActivity">

    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:contentDescription="@string/cancel_logo"
        android:onClick="onClickExit"
        android:padding="4dp"
        android:src="@drawable/outline_close" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/successful_create_account"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_margin="50dp"
            app:lottie_autoPlay="true"
            app:lottie_loop="false"
            app:lottie_rawRes="@raw/successful_reset" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset_password_success_title"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textSize="34sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset_password_success_sub_title"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textStyle="normal" />

        <Button
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="120dp"
            android:background="@drawable/btn_custom"
            android:elevation="4dp"
            android:onClick="onClickContinue"
            android:text="@string/continue_btn"
            android:textAllCaps="true"
            android:textColor="@color/white" />

    </LinearLayout>

</LinearLayout>