<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".otp.OtpVerificationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="30dp">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/cancel_logo"
            android:onClick="onClickExit"
            android:padding="4dp"
            android:src="@drawable/outline_close" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:textStyle="bold"
            android:includeFontPadding="false"
            android:text="@string/otp_code_title"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textSize="100sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textStyle="normal"
            android:includeFontPadding="false"
            android:text="@string/otp_code_verification"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textSize="24sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:textStyle="normal"
            android:includeFontPadding="false"
            android:text="@string/otp_code_description"
            android:textAlignment="center"
            android:textSize="16sp" />

        <com.chaos.view.PinView
            style="@style/PinWidget.PinView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:cursorVisible="true"
            android:inputType="number"
            android:itemBackground="@color/white"
            app:cursorColor="@color/black"
            app:hideLineWhenFilled="true"
            app:itemCount="6"
            app:itemHeight="50dp"
            app:itemRadius="4dp"
            app:itemWidth="50dp"
            app:lineColor="@color/red_light" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/btn_custom"
            android:onClick="onClickVerify"
            android:text="@string/otp_code_btn"
            android:textColor="@color/white" />

    </LinearLayout>

</ScrollView>